--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-24 09:12+0000\n"
+"POT-Creation-Date: 2024-11-12 11:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -820,6 +820,9 @@ msgstr "SSFA - Acordo de financiamento de pequena escala"
 msgid "Memorandum of Understanding"
 msgstr "Memorando de Entendimento"
 
+msgid "General Terms and Conditions"
+msgstr ""
+
 msgid "Draft"
 msgstr "Rascunho"
 
@@ -1537,8 +1540,8 @@ msgstr "Visita planejada não pode ser definida para intervenções encerradas"
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
 msgstr ""
-"Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou "
-"Encerrado\""
+"Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou Encerrado"
+"\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
