--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-24 09:12+0000\n"
+"POT-Creation-Date: 2024-11-12 11:55+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -803,6 +803,9 @@ msgstr "Договор о финансировании малых проекто
 
 msgid "Memorandum of Understanding"
 msgstr "Меморандум о взаимопонимании"
+
+msgid "General Terms and Conditions"
+msgstr ""
 
 msgid "Draft"
 msgstr "Черновик"
@@ -1917,9 +1920,9 @@ msgid ""
 "Programme Document will not change status until the related PCA is in Signed "
 "status"
 msgstr ""
-"СоП, связанное с этим ПД, находится в статусе \"Черновик\", "
-"\"Приостановлен\" или \"Прекращен\". Данный программный документ невозможно "
-"изменить пока связанное с ним Соглашение не перейдет в статус \"Подписан\"."
+"СоП, связанное с этим ПД, находится в статусе \"Черновик\", \"Приостановлен"
+"\" или \"Прекращен\". Данный программный документ невозможно изменить пока "
+"связанное с ним Соглашение не перейдет в статус \"Подписан\"."
 
 msgid "PD cannot transition to signed if the Partner is Blocked in Vision"
 msgstr "ПД не может перейти к подписанию, если партнер заблокирован в VISION"
