--- a/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-01 11:59+0000\n"
+"POT-Creation-Date: 2024-12-03 14:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -210,7 +210,7 @@ msgstr "Numéro de réference"
 msgid "Involves Remote Monitoring"
 msgstr ""
 
-msgid "Report Reviewer"
+msgid "Report Reviewers"
 msgstr ""
 
 msgid "Reviewed By"
@@ -242,7 +242,6 @@ msgstr "Point d'action de l'activité de suivi"
 
 msgid "Monitoring Activity Action Points"
 msgstr "Points d'action de l'activité de suivi"
-
 
 msgid "Description"
 msgstr ""
