--- a/src/etools/applications/organizations/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/organizations/locale/ru/LC_MESSAGES/django.po
@@ -1,9 +1,4 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -16,60 +11,58 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Bilateral / Multilateral"
-msgstr ""
+msgstr "Двусторонний / многосторонний"
 
 msgid "Civil Society Organization"
-msgstr ""
+msgstr "Организация гражданского общества"
 
 msgid "Government"
-msgstr ""
+msgstr "Правительство"
 
 msgid "UN Agency"
-msgstr ""
+msgstr "Агентство ООН"
 
 msgid "International"
-msgstr ""
+msgstr "Международный"
 
 msgid "National"
-msgstr ""
+msgstr "Национальный"
 
 msgid "Community Based Organization"
-msgstr ""
+msgstr "Общественная организация"
 
 msgid "Academic Institution"
-msgstr ""
+msgstr "Академическое учреждение"
 
 msgid "Red Cross/Red Crescent National Societies"
-msgstr ""
+msgstr "Красный Крест/Красный Полумесяц национальные общества"
 
 msgid "Parent Organization"
-msgstr ""
+msgstr "Родительская организация"
 
 msgid "Vendor Name"
-msgstr ""
+msgstr "Имя продавца"
 
 msgid "Vendor Number"
-msgstr ""
+msgstr "Номер продавца"
 
 msgid "Organization Type"
-msgstr ""
+msgstr "Организация типа"
 
 msgid "CSO Type"
-msgstr ""
+msgstr "Тип CSO"
 
 msgid "Short Name"
-msgstr ""
+msgstr "Короткое имя"
 
 msgid "Other Details"
-msgstr ""
+msgstr "Другие детали"
 
 msgid "Organization"
-msgstr ""
+msgstr "Организация"
 
 msgid "Organizations"
-msgstr ""
+msgstr "Организации"
