--- a/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-08 06:58+0000\n"
+"POT-Creation-Date: 2025-07-24 08:57+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -66,6 +66,52 @@ msgstr "Estado"
 msgid "Attachments"
 msgstr "Archivo adjunto"
 
+msgid "Question"
+msgstr "Pregunta"
+
+#, fuzzy
+#| msgid "Question Text"
+msgid "Question Target Level"
+msgstr "Texto de la pregunta"
+
+msgid "Collection Methods"
+msgstr ""
+
+msgid "Sections"
+msgstr "Secciones"
+
+msgid "Answer Type"
+msgstr "Tipo de respuesta"
+
+msgid "Group"
+msgstr ""
+
+#, fuzzy
+#| msgid "Option"
+msgid "Options"
+msgstr "Opción"
+
+#, fuzzy
+#| msgid "Is Active"
+msgid "Is Active ?"
+msgstr "Está Activo"
+
+#, fuzzy
+#| msgid "Count as HACT"
+msgid "Count as HACT ?"
+msgstr "Cuenta como HACT"
+
+#, fuzzy
+#| msgid "Is Custom"
+msgid "Is Custom ?"
+msgstr "Es personalizada"
+
+msgid "Yes"
+msgstr ""
+
+msgid "No"
+msgstr ""
+
 msgid "Global Attachments"
 msgstr "Adjuntos globales"
 
@@ -111,9 +157,6 @@ msgstr "Producto"
 msgid "PD/SPD"
 msgstr "PD/SPD"
 
-msgid "Answer Type"
-msgstr "Tipo de respuesta"
-
 msgid "Choices Size"
 msgstr "Tamaño de Selección"
 
@@ -122,9 +165,6 @@ msgstr "Nivel"
 
 msgid "Category"
 msgstr "Categoría"
-
-msgid "Sections"
-msgstr "Secciones"
 
 msgid "Question Text"
 msgstr "Texto de la pregunta"
@@ -140,9 +180,6 @@ msgstr "Está Activo"
 
 msgid "Other details"
 msgstr ""
-
-msgid "Question"
-msgstr "Pregunta"
 
 msgid "Questions"
 msgstr "Preguntas"
