--- a/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-03 14:31+0000\n"
+"POT-Creation-Date: 2025-08-04 07:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -230,6 +230,9 @@ msgstr "Signaler le motif du rejet"
 
 msgid "Cancellation reason"
 msgstr "Motif d'annulation"
+
+msgid "Objective"
+msgstr "Objectif"
 
 msgid "Monitoring Activity"
 msgstr "Activité de suivi"
