--- a/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-03 14:31+0000\n"
+"POT-Creation-Date: 2025-08-04 07:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -227,6 +227,9 @@ msgstr "Motivo da rejeição do relatório"
 
 msgid "Cancellation reason"
 msgstr "Motivo do cancelamento"
+
+msgid "Objective"
+msgstr "Objetivo"
 
 msgid "Monitoring Activity"
 msgstr "Atividade de Monitoramento"
