--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-07 16:27+0000\n"
+"POT-Creation-Date: 2025-08-29 14:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -232,8 +232,8 @@ msgstr "سبب الإلغاء"
 msgid "Objective"
 msgstr "أهداف"
 
-msgid "Type Of Facility"
-msgstr "نوع المنشأة"
+msgid "Facility types"
+msgstr "Facility types"
 
 msgid "Monitoring Activity"
 msgstr "نشاط المراقبة"
