--- a/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-07 16:27+0000\n"
+"POT-Creation-Date: 2025-08-29 14:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -234,8 +234,8 @@ msgstr "Motif d'annulation"
 msgid "Objective"
 msgstr "Objectif"
 
-msgid "Type Of Facility"
-msgstr "Type d'installation"
+msgid "Facility types"
+msgstr "Types d'établissements"
 
 msgid "Monitoring Activity"
 msgstr "Activité de suivi"
@@ -320,6 +320,3 @@ msgstr "Modèles"
 
 msgid "Attachments"
 msgstr "Pièces jointes"
-
-#~ msgid "Invited"
-#~ msgstr "Invité"
