--- a/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-07 16:27+0000\n"
+"POT-Creation-Date: 2025-08-29 14:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -231,8 +231,8 @@ msgstr "Motivo do cancelamento"
 msgid "Objective"
 msgstr "Objetivo"
 
-msgid "Type Of Facility"
-msgstr "Tipo de instalação"
+msgid "Facility types"
+msgstr "Tipos de instalações"
 
 msgid "Monitoring Activity"
 msgstr "Atividade de Monitoramento"
@@ -317,6 +317,3 @@ msgstr "Modelos"
 
 msgid "Attachments"
 msgstr "Anexos"
-
-#~ msgid "Invited"
-#~ msgstr "Convidado"
