--- a/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-04 07:25+0000\n"
+"POT-Creation-Date: 2025-08-27 08:39+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -305,6 +305,10 @@ msgstr "Categoría de Punto de Acción"
 
 msgid "Priority"
 msgstr "Prioridad"
+
+msgid ""
+"Cannot assign inactive location \"{}\". Please choose an active location."
+msgstr "No se puede asignar una ubicación inactiva \"{}\". Por favor, elija una ubicación activa."
 
 msgid "TPM Concern Category"
 msgstr ""
