261183 add type of facility (#4024)
* [261183] Adding type of facility

* isort

---------

Co-authored-by: Mercea Emil <office@insightfeatures.com>

--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -232,6 +232,9 @@ msgstr "سبب الإلغاء"
 msgid "Objective"
 msgstr "أهداف"
 
+msgid "Type Of Facility"
+msgstr "نوع المنشأة"
+
 msgid "Monitoring Activity"
 msgstr "نشاط المراقبة"
 
