--- a/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
@@ -234,6 +234,9 @@ msgstr "Причина отмены"
 msgid "Objective"
 msgstr "Цель"
 
+msgid "Type Of Facility"
+msgstr "Тип объекта"
+
 msgid "Monitoring Activity"
 msgstr "Мониторинг активности"
 
