--- a/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
@@ -234,6 +234,9 @@ msgstr "Motivo de Cancelación"
 msgid "Objective"
 msgstr "Objetivo"
 
+msgid "Type Of Facility"
+msgstr "Tipo de instalación"
+
 msgid "Monitoring Activity"
 msgstr "Actividad de Monitoreo "
 
