--- a/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
@@ -231,6 +231,9 @@ msgstr "Motivo do cancelamento"
 msgid "Objective"
 msgstr "Objetivo"
 
+msgid "Type Of Facility"
+msgstr "Tipo de instalação"
+
 msgid "Monitoring Activity"
 msgstr "Atividade de Monitoramento"
 
