Revert "Fix conflicts"
This reverts commit 384eea0cbd849f02ae42a049ef4db697f0672083, reversing
changes made to 96ec73f715c58161954a3c29d4b7c9e274a92a58.

--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -233,7 +233,7 @@ msgid "Objective"
 msgstr "أهداف"
 
 msgid "Facility types"
-msgstr "أنواع المرافق"
+msgstr "Facility types"
 
 msgid "Monitoring Activity"
 msgstr "نشاط المراقبة"
@@ -306,10 +306,6 @@ msgstr "فئة نقطة العمل"
 
 msgid "Priority"
 msgstr "الأولوية"
-
-msgid ""
-"Cannot assign inactive location \"{}\". Please choose an active location."
-msgstr "لا يمكن تعيين موقع غير نشط \"{}\". يرجى اختيار موقع نشط."
 
 msgid "TPM Concern Category"
 msgstr ""
