--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-27 08:39+0000\n"
+"POT-Creation-Date: 2025-09-01 17:55+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,8 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
-"&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
 msgid "TPM Partner selected for staff activity"
 msgstr "تم اختيار شريك المراقب المستقل لنشاط الموظفين"
@@ -26,20 +25,12 @@ msgid "Staff members do not belong to the selected partner"
 msgstr "أعضاء فريق العمل لا ينتمون إلى الشريك المحدد"
 
 #, python-format
-msgid ""
-"You've selected a PD/SPD and unselected some of it's corresponding partners, "
-"please either remove the PD or add the partners back before saving: %s"
-msgstr ""
-"لقد حددت PD/SPD وألغيت تحديد بعض الشركاء المناظرين لها، يرجى إما إزالة PD أو "
-"إضافة الشركاء مرة أخرى قبل الحفظ: %s"
+msgid "You've selected a PD/SPD and unselected some of it's corresponding partners, please either remove the PD or add the partners back before saving: %s"
+msgstr "لقد حددت PD/SPD وألغيت تحديد بعض الشركاء المناظرين لها، يرجى إما إزالة PD أو إضافة الشركاء مرة أخرى قبل الحفظ: %s"
 
 #, python-format
-msgid ""
-"You've selected a PD/SPD and unselected some of it's corresponding outputs, "
-"please either remove the PD or add the outputs back before saving: %s"
-msgstr ""
-"لقد حددت PD/SPD وألغيت تحديد بعض المخرجات المقابلة لها، يرجى إما إزالة PD أو "
-"إضافة المخرجات مرة أخرى قبل الحفظ: %s"
+msgid "You've selected a PD/SPD and unselected some of it's corresponding outputs, please either remove the PD or add the outputs back before saving: %s"
+msgstr "لقد حددت PD/SPD وألغيت تحديد بعض المخرجات المقابلة لها، يرجى إما إزالة PD أو إضافة المخرجات مرة أخرى قبل الحفظ: %s"
 
 msgid "Partner is not defined for TPM activity"
 msgstr "لم يتم تحديد الشريك لنشاط المُراقب المستقل"
@@ -232,8 +223,8 @@ msgstr "سبب الإلغاء"
 msgid "Objective"
 msgstr "أهداف"
 
-msgid "Type Of Facility"
-msgstr "نوع المنشأة"
+msgid "Facility types"
+msgstr ""
 
 msgid "Monitoring Activity"
 msgstr "نشاط المراقبة"
@@ -307,8 +298,7 @@ msgstr "فئة نقطة العمل"
 msgid "Priority"
 msgstr "الأولوية"
 
-msgid ""
-"Cannot assign inactive location \"{}\". Please choose an active location."
+msgid "Cannot assign inactive location \"{}\". Please choose an active location."
 msgstr "لا يمكن تعيين موقع غير نشط \"{}\". يرجى اختيار موقع نشط."
 
 msgid "TPM Concern Category"
@@ -322,3 +312,6 @@ msgstr "النماذج"
 
 msgid "Attachments"
 msgstr "المرفقات"
+
+#~ msgid "Type Of Facility"
+#~ msgstr "نوع المنشأة"
